[gd_scene load_steps=3 format=3 uid="uid://uqj81yft7u51"]

[ext_resource type="Theme" uid="uid://b1evs2a7h13oy" path="res://assets/main_theme.tres" id="1_dr3e1"]
[ext_resource type="Script" path="res://scenes/RobotScreen/robot_stats_panel.gd" id="2_phaec"]

[node name="RobotStatsPanel" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_dr3e1")
script = ExtResource("2_phaec")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="BotName" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
placeholder_text = "MARESCIALLO"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Playing" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "PLAYING"

[node name="Ant" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "ANT"

[connection signal="text_changed" from="VBoxContainer/BotName" to="." method="_on_bot_name_text_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/Playing" to="." method="_on_playing_toggled"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/Ant" to="." method="_on_ant_toggled"]
